@@ -1,5 +1,6 @@
 Version 3.3 (2010-xx-xx)
 	Fixed bug where backspace on a table on IE would produce an empty tbody and some JS exceptions.
+	Fixed bug where some redundant children wasn't removed properly when applying inline styles to them.
 Version 3.3rc1 (2010-02-23)
 	Fixed bug with new legacyoutput plugin not working correctly on it's own.
 	Fixed bug some performance issues with removing text formats.
